scroll position mobile fixed

--- a/src/App.css
+++ b/src/App.css
@@ -562,12 +562,15 @@ footer {
     transition: all 0.5s ease;
   }
   .scrolltobottom {
-    left: 45%;
-    right: 45%;
+    right: 10px;
     bottom: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .scrolltobottomdark {
+    right: 10px;
+    bottom: 75px;
   }
   .nav-menu:active {
     background: rgb(22, 21, 21);
